--- a/src/index.html
+++ b/src/index.html
@@ -2,10 +2,11 @@
 <html>
     <head>
         <title>The Second Lap</title>
-
+        <meta charset="UTF-8">
         <link rel="stylesheet" href="assets/styles.css">
-        <link href="jquery.fullPage.css" rel="stylesheet">
         <meta name="viewport" content="width=device-width,initial-scale=1.0">
+        <link rel="shortcut icon" href="favicon.png">
+        <link href="https://fonts.googleapis.com/css?family=Josefin+Sans:600|Montserrat" rel="stylesheet">
     </head>
     <body>
         <nav class="navbar">
@@ -19,6 +20,7 @@
     </div>
 </nav>
 
+        <img class="run-image" src="imgs/run.png">
         <div id="fullpage">
                 <section class=" section active intro-section">
     	<div class="common">
@@ -29,7 +31,7 @@
             </div>
             <div class="intro-text col-lg-4 col-md-4 col-xs-12 col-sm-12">
                 <img src="./imgs/thesecondlap.png">
-                <p>Life is the most valuable gift, yet we fail to appreciate it. Of all the things one fancies, what if you had the power to give this gift to someone in need? On August 13th, 2017, YES BANK and Excel 2107 will strive to spread this message through ​ “The Second Lap”, a mini marathon being organised ​ in Kochi in association with Gold’s Gym and Medical Trust Hospital, in connection with ​ World Organ Donation Day​.</p>
+                <p>Life is the most valuable gift, yet we fail to appreciate it. Of all the things one fancies, what if you had the power to give this gift to someone in need? On August 13th, 2017, <b>YES BANK</b> and <b>Excel 2017</b> will strive to spread this message through ​ <b>“The Second Lap”</b>, a mini marathon being organised ​ in Kochi in association with Gold’s Gym and Medical Trust Hospital, in connection with ​ World Organ Donation Day​.</p>
             </div>
             </div>
         </div>
@@ -38,9 +40,7 @@
 
                 <section class=" section">
     <div class="common timer-contain">
-
         <div class="wrap">
-
             <div class="countdown">
                 <div class="bloc-time days" data-init-value="40">
                     <span class="count-title">Days</span>
@@ -152,23 +152,28 @@
             </div>
         </div>
         <div class="register">
-            <a href="#" class="btn btn-danger reg-button" role="button">Register</a>
+            <a target="_blank" href="https://docs.google.com/forms/d/e/1FAIpQLSddm0Qy79z6XFXOO_rBmIkNsCEZUbccSKTT90iZH6WzUAfBtg/viewform" class="btn btn-danger reg-button" role="button">Register</a>
         </div>
     </div>
 </section>
 
             <section class="section">
-    <div class="route">
+    <div class="route container">
 
         <div class="waypoints">
-            <h1>WayPoints</h1>
-            <p>Bridge</p>
+            <h1>Waypoints</h1>
+            <p>K.K Premachandran Sports Complex</p>
+            <i class="fa fa-arrow-down" aria-hidden="true"></i>
+            <p>Bristow Road</p>
+            <i class="fa fa-arrow-down" aria-hidden="true"></i>
+            <p>Venduruthy Bridge</p>
+            <i class="fa fa-arrow-down" aria-hidden="true"></i>
+            <p>Ravipuram Junction</p>
+            <i class="fa fa-arrow-down" aria-hidden="true"></i>
             <p>Marine Drive Ground</p>
-            <p>Bridge</p>
-            <p>Marine Drive ground</p>
-
         </div>
         <div id="map"></div>
+        <a target="_blank" href="https://www.google.co.in/maps/dir/K.K.Premachandran+Sports+Complex,+Bristow+Road,+Willingdon+Island,+Kochi,+Kerala/Marine+Drive+Ground,+Ernakulam,+Kerala/@9.9587692,76.2638433,14z/data=!3m1!4b1!4m13!4m12!1m5!1m1!1s0x3b086d5f50a46f4b:0x1626e0160115df4b!2m2!1d76.2705403!2d9.9556001!1m5!1m1!1s0x3b080d571d32c3b7:0x2a382c113150ecfa!2m2!1d76.2748523!2d9.981022" class="btn btn-danger" id="map-button" role="button">Show on map</a>
 
     </div>
 
@@ -206,33 +211,33 @@
             <section class="section">
     <div class="common">
     <div class="contact">
-        <h2 class="contact_heading">Contact US</h2>
+        <h2 class="contact-heading">Contact Us</h2>
         <div class="contacts_section">
             <div class="container">
-                <div class="col-lg-6 col-md-6 col-xs-6 col-sm-6">
-                    <h3>Elza Tess Varkey</h3>
-                    <span>Social Initatives Manager,Excel2017</span><br>
-                    <span>+91 9562391591</span>
+                <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12 ">
+                    <h2 class="contact-head">Elza Tess Varkey</h2>
+                    <p>Social Initatives Manager, Excel2017</p>
+                    <p>+91 9562391591</p>
                 </div>
-                <div class="col-xs-6 col-md-6 col-lg-6 col-xs-6">
-                    <h3>Arjun Saju</h3>
-                    <span>Chairman,Excel2017</span><br>
-                    <span>+91 8943239997</span>
+                <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
+                    <h2 class="contact-head">Arjun Saju</h2>
+                    <p>Chairman, Excel2017</p>
+                    <p>+91 8943239997</p>
                 </div>
             </div>
         </div>
         <div class="socialIcons">
-            <h4>Follow Us on</h4>
-            <a href="#" class="facebook"><i class="fa fa-facebook-official fa-2x" aria-hidden="true"></i></a>
-            <a href="#" class="youtube"><i class="fa fa-youtube fa-2x"></i></a>
-            <a href="#" class="instagram"><i class="fa fa-instagram fa-2x"></i></a>
+            <h4>Follow us on:</h4>
+            <div class="social-icons">
+                <a href="https://www.facebook.com/excelmec" class="facebook"><i class="fa fa-facebook-official fa-2x" aria-hidden="true"></i></a>
+                <a href="https://www.youtube.com/channel/UCLP9HOgPekLpFzv2xIVwoFg" class="youtube"><i class="fa fa-youtube fa-2x"></i></a>
+                <a href="https://www.instagram.com/excelmec/" class="instagram"><i class="fa fa-instagram fa-2x"></i></a>
+            </div>
         </div>
     </div>
     </div>
 </section>
         </div>
-        <script src="./jquery-3.2.1.min%20(1).js"></script>
-        <script src="jquery.fullPage.min.js"></script>
         <script src="https://use.fontawesome.com/75bc5066dd.js"></script>
         <script src="assets/scripts.js"></script>
         <script async src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDJogV8LYqidEbxxMRXHR4DLTxQtk_V5Kc&callback=initMap">
@@ -240,7 +245,21 @@
 
         <script>
             //$(".dial").knob({'rotation':'anticlockwise'})
-	        $("#fullpage").fullpage();
+            $(document).ready(function(){
+                var scroll=0;
+                $("#fullpage").fullpage({
+                    onLeave: function(index, nextIndex, direction){
+                        if(direction=='down'){
+                            scroll-=100;
+                        }
+                        else{
+                            scroll+=100;
+                        }
+                        $('.run-image').css({transform: 'translate(-50%,'+scroll+'px)'});
+                    }
+                });
+            });
+
         </script>
     </body>
 </html>
